--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -1,10 +1,6 @@
 name: CMake
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: [push]
 
 env:
   BUILD_TYPE: Release
@@ -16,23 +12,19 @@ jobs:
     # The CMake configure and build commands are platform agnostic and should work equally
     # well on Windows or Mac.  You can convert this to a matrix build if you need
     # cross-platform coverage.
-    # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: ubuntu-18.04
+    # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix    
+    runs-on: ${{ matrix.os }}
+    
     strategy:
-      matrix:
-        build_type: [Release, Debug]
+        matrix:
+            os: [ubuntu-18.04, ubuntu-20.04]#macos-latest
+            build_type: [Release, Debug]
     steps:
       #
       # Setup the machines and build environment
       #
       - name: Setup Ubuntu18.04.
-        uses: machines-in-motion/mim_github_actions/setup_ubuntu18_04@main
-
-      #
-      # Setup the machines and build environment
-      #
-      - name: Setup laas packages.
-        uses: machines-in-motion/mim_github_actions/setup_laas_packages@main
+        uses: Lhumd/ubuntu_installation_scripts/.github/workflows@elham/action
       
       #
       # Checkout the current package locally
