--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -24,7 +24,7 @@ jobs:
       # Setup the machines and build environment
       #
       - name: Setup Ubuntu18.04.
-        uses: Lhumd/ubuntu_installation_scripts/.github/workflows@elham/action
+        uses: Lhumd/ubuntu_installation_scripts/.github/workflows@elham/Action
       
       #
       # Checkout the current package locally
