--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: Lhumd/ubuntu_installation_scripts
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets. }}
           path: ./.github/workflows
       
       #
@@ -41,10 +41,10 @@ jobs:
       #
       # Activate the secret ssh key
       #
-      - name: Spawn ssh-agent
-        uses: webfactory/ssh-agent@v0.5.2
-        with:
-          ssh-private-key: ${{ secrets.GA_SSH_PRIVATE_KEY }}
+#       - name: Spawn ssh-agent
+#         uses: webfactory/ssh-agent@v0.5.2
+#         with:
+#           ssh-private-key: ${{ secrets.GA_SSH_PRIVATE_KEY }}
 
       #
       # Clone the dependencies that needs to be built.
