--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -25,13 +25,7 @@ jobs:
       #
 #       - name: Setup Ubuntu18.04.
 #         uses: Lhumd/ubuntu_installation_scripts/.github/workflows@elham/Action
-      - name: Setup Ubuntu18.04.
-        uses: actions/checkout@v2
-        with:
-          repository: Lhumd/ubuntu_installation_scripts
-          token: ${{ secrets.GITHUB_TOKEN}}
-          path: ./.github/workflows
-      
+
       #
       # Checkout the current package locally
       #
@@ -40,11 +34,19 @@ jobs:
 
       #
       # Activate the secret ssh key
-      #
-#       - name: Spawn ssh-agent
-#         uses: webfactory/ssh-agent@v0.5.2
-#         with:
-#           ssh-private-key: ${{ secrets.GA_SSH_PRIVATE_KEY }}
+      
+      - name: Spawn ssh-agent
+        uses: webfactory/ssh-agent@v0.5.2
+        with:
+          ssh-private-key: ${{ secrets.GA_SSH_PRIVATE_KEY }}
+          
+      - name: Setup Ubuntu18.04.
+        uses: actions/checkout@v2
+        with:
+          repository: Lhumd/ubuntu_installation_scripts
+          token: ${{ secrets.GITHUB_TOKEN}}
+          path: ./.github/workflows
+      
 
       #
       # Clone the dependencies that needs to be built.
